commit bilingual contents

--- a/docs/docs-ref-autogen/office/office/office.eventtype.yml
+++ b/docs/docs-ref-autogen/office/office/office.eventtype.yml
@@ -2,12 +2,12 @@
 items:
   - uid: 'office!Office.EventType:enum'
     summary: |-
-      <span data-ttu-id="7a285-101">指定引发的事件的类型。</span><span class="sxs-lookup"><span data-stu-id="7a285-101">Specifies the kind of event that was raised.</span></span> <span data-ttu-id="7a285-102">由 \* EventArgs `type`对象的属性返回。</span><span class="sxs-lookup"><span data-stu-id="7a285-102">Returned by the `type` property of an \*EventArgs object.</span></span>
+      指定引发的事件的类型。 由 * EventArgs `type`对象的属性返回。
 
-      <span data-ttu-id="7a285-103">项目支持的外接程序`Office.EventType.ResourceSelectionChanged`</span><span class="sxs-lookup"><span data-stu-id="7a285-103">Add-ins for Project support the `Office.EventType.ResourceSelectionChanged`</span></span><!-- --><span data-ttu-id="7a285-104">, `Office.EventType.TaskSelectionChanged`</span><span class="sxs-lookup"><span data-stu-id="7a285-104"></span></span><!-- --><span data-ttu-id="7a285-105">和`Office.EventType.ViewSelectionChanged`事件类型。</span><span class="sxs-lookup"><span data-stu-id="7a285-105">, and `Office.EventType.ViewSelectionChanged` event types.</span></span>
+      项目支持的外接程序`Office.EventType.ResourceSelectionChanged`<!-- -->, `Office.EventType.TaskSelectionChanged`<!-- -->和`Office.EventType.ViewSelectionChanged`事件类型。
 
-      <span data-ttu-id="7a285-106">仅适用于 Outlook 的任务窗格外接程序支持邮箱 API 集事件类型。</span><span class="sxs-lookup"><span data-stu-id="7a285-106">Only task pane add-ins for Outlook support Mailbox API set event types.</span></span>
-    remarks: '<span data-ttu-id="7a285-107">和主机： Excel、Word。 \*\* `BindingDataChanged` `BindingSelectionChanged` \*\*</span><span class="sxs-lookup"><span data-stu-id="7a285-107">**`BindingDataChanged` and `BindingSelectionChanged` hosts**: Excel, Word.</span></span>'
+      仅适用于 Outlook 的任务窗格外接程序支持邮箱 API 集事件类型。
+    remarks: 和主机： Excel、Word。 ** `BindingDataChanged` `BindingSelectionChanged` **
     name: Office.EventType
     fullName: Office.EventType
     langs:
@@ -36,8 +36,8 @@ items:
       - 'office!Office.EventType.TaskSelectionChanged:member'
       - 'office!Office.EventType.ViewSelectionChanged:member'
   - uid: 'office!Office.EventType.ActiveViewChanged:member'
-    summary: <span data-ttu-id="7a285-108">引发了 Document.ActiveViewChanged 事件。</span><span class="sxs-lookup"><span data-stu-id="7a285-108">A Document.ActiveViewChanged event was raised.</span></span>
-    remarks: '<span data-ttu-id="7a285-109">**主机**： PowerPoint</span><span class="sxs-lookup"><span data-stu-id="7a285-109">**Hosts**: PowerPoint</span></span>'
+    summary: 引发了 Document.ActiveViewChanged 事件。
+    remarks: '**主机**： PowerPoint'
     name: ActiveViewChanged
     fullName: ActiveViewChanged
     langs:
@@ -45,11 +45,11 @@ items:
     type: field
   - uid: 'office!Office.EventType.AppointmentTimeChanged:member'
     summary: |-
-      <span data-ttu-id="7a285-110">在 Outlook 中更改所选约会或系列的任何日期或时间时触发的触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-110">Triggers when any date or time of the selected appointment or series is changed in Outlook.</span></span> <span data-ttu-id="7a285-111">仅在任务窗格中受支持。</span><span class="sxs-lookup"><span data-stu-id="7a285-111">Supported with task pane only.</span></span>
+      在 Outlook 中更改所选约会或系列的任何日期或时间时触发的触发器。 仅在任务窗格中受支持。
 
-      <span data-ttu-id="7a285-112">事件处理程序接收一个类型为的参数`Office.AppointmentTimeChangedEventArgs`</span><span class="sxs-lookup"><span data-stu-id="7a285-112">The event handler receives an argument of type `Office.AppointmentTimeChangedEventArgs`</span></span><!-- --><span data-ttu-id="7a285-113">.</span><span class="sxs-lookup"><span data-stu-id="7a285-113"></span></span>
+      事件处理程序接收一个类型为的参数`Office.AppointmentTimeChangedEventArgs`<!-- -->.
 
-      <span data-ttu-id="7a285-114">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="7a285-114">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: AppointmentTimeChanged
     fullName: AppointmentTimeChanged
     langs:
@@ -57,50 +57,49 @@ items:
     type: field
   - uid: 'office!Office.EventType.AttachmentsChanged:member'
     summary: |-
-      <span data-ttu-id="7a285-115">将附件添加到项目或从项目中删除附件时触发。</span><span class="sxs-lookup"><span data-stu-id="7a285-115">Triggers when an attachment is added to or removed from an item.</span></span> <span data-ttu-id="7a285-116">仅在任务窗格中受支持。</span><span class="sxs-lookup"><span data-stu-id="7a285-116">Supported with task pane only.</span></span>
+      将附件添加到项目或从项目中删除附件时触发。 仅在任务窗格中受支持。
 
-      <span data-ttu-id="7a285-117">事件处理程序接收一个类型为的参数`Office.AttachmentsChangedEventArgs`</span><span class="sxs-lookup"><span data-stu-id="7a285-117">The event handler receives an argument of type `Office.AttachmentsChangedEventArgs`</span></span><!-- --><span data-ttu-id="7a285-118">.</span><span class="sxs-lookup"><span data-stu-id="7a285-118"></span></span>
+      事件处理程序接收一个类型为的参数`Office.AttachmentsChangedEventArgs`<!-- -->.
 
-      <span data-ttu-id="7a285-119">\[[API 集：邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="7a285-119">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: AttachmentsChanged
     fullName: AttachmentsChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.BindingDataChanged:member'
-    summary: '<span data-ttu-id="7a285-120">绑定内的数据更改时发生。</span><span class="sxs-lookup"><span data-stu-id="7a285-120">Occurs when data within the binding is changed.</span></span> <span data-ttu-id="7a285-121">若要为绑定的 BindingDataChanged 事件添加事件处理程序，请使用 Binding 对象的 addHandlerAsync 方法。</span><span class="sxs-lookup"><span data-stu-id="7a285-121">To add an event handler for the BindingDataChanged event of a binding, use the addHandlerAsync method of the Binding object.</span></span> <span data-ttu-id="7a285-122">事件处理程序接收[BindingDataChangedEventArgs](xref:office!Office.BindingDataChangedEventArgs:interface)类型的参数</span><span class="sxs-lookup"><span data-stu-id="7a285-122">The event handler receives an argument of type [Office.BindingDataChangedEventArgs](xref:office!Office.BindingDataChangedEventArgs:interface)</span></span><!-- --><span data-ttu-id="7a285-123">.</span><span class="sxs-lookup"><span data-stu-id="7a285-123"></span></span>'
-    remarks: '<span data-ttu-id="7a285-124">**主机**： Excel、Word</span><span class="sxs-lookup"><span data-stu-id="7a285-124">**Hosts**: Excel, Word</span></span>'
+    summary: '绑定内的数据更改时发生。 若要为绑定的 BindingDataChanged 事件添加事件处理程序，请使用 Binding 对象的 addHandlerAsync 方法。 事件处理程序接收[BindingDataChangedEventArgs](xref:office!Office.BindingDataChangedEventArgs:interface)类型的参数<!-- -->.'
+    remarks: '**主机**： Excel、Word'
     name: BindingDataChanged
     fullName: BindingDataChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.BindingSelectionChanged:member'
-    summary: '<span data-ttu-id="7a285-125">绑定内的选择更改时发生。</span><span class="sxs-lookup"><span data-stu-id="7a285-125">Occurs when the selection is changed within the binding.</span></span> <span data-ttu-id="7a285-126">若要为绑定的了 binding.bindingselectionchanged 事件添加事件处理程序，请使用 Binding 对象的 addHandlerAsync 方法。</span><span class="sxs-lookup"><span data-stu-id="7a285-126">To add an event handler for the BindingSelectionChanged event of a binding, use the addHandlerAsync method of the Binding object.</span></span> <span data-ttu-id="7a285-127">事件处理程序接收[BindingSelectionChangedEventArgs](xref:office!Office.BindingSelectionChangedEventArgs:interface)类型的参数</span><span class="sxs-lookup"><span data-stu-id="7a285-127">The event handler receives an argument of type [Office.BindingSelectionChangedEventArgs](xref:office!Office.BindingSelectionChangedEventArgs:interface)</span></span><!-- --><span data-ttu-id="7a285-128">.</span><span class="sxs-lookup"><span data-stu-id="7a285-128"></span></span>'
-    remarks: '<span data-ttu-id="7a285-129">**主机**： Excel、Word</span><span class="sxs-lookup"><span data-stu-id="7a285-129">**Hosts**: Excel, Word</span></span>'
+    summary: '绑定内的选择更改时发生。 若要为绑定的了 binding.bindingselectionchanged 事件添加事件处理程序，请使用 Binding 对象的 addHandlerAsync 方法。 事件处理程序接收[BindingSelectionChangedEventArgs](xref:office!Office.BindingSelectionChangedEventArgs:interface)类型的参数<!-- -->.'
+    remarks: '**主机**： Excel、Word'
     name: BindingSelectionChanged
     fullName: BindingSelectionChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.DialogEventReceived:member'
-    summary: '<span data-ttu-id="7a285-130">当对话框有事件（例如，对话框关闭或对话框导航失败）时触发触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-130">Triggers when Dialog has an event, such as dialog closed or dialog navigation failed.</span></span>'
+    summary: 当对话框有事件（例如，对话框关闭或对话框导航失败）时触发触发器。
     name: DialogEventReceived
     fullName: DialogEventReceived
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.DialogMessageReceived:member'
-    summary: <span data-ttu-id="7a285-131">当对话框通过 Office.context.ui.messageparent 发送邮件时触发触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-131">Triggers when Dialog sends a message via MessageParent.</span></span>
+    summary: 当对话框通过 Office.context.ui.messageparent 发送邮件时触发触发器。
     name: DialogMessageReceived
     fullName: DialogMessageReceived
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.DocumentSelectionChanged:member'
-    summary: <span data-ttu-id="7a285-132">在文档级别选择发生时触发触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-132">Triggers when a document-level selection happens.</span></span>
-    remarks: '<span data-ttu-id="7a285-133">**主机**： Excel、Word</span><span class="sxs-lookup"><span data-stu-id="7a285-133">**Hosts**: Excel, Word</span></span>'
+    summary: 在文档级别选择发生时触发触发器。
+    remarks: '**主机**： Excel、Word'
     name: DocumentSelectionChanged
     fullName: DocumentSelectionChanged
     langs:
@@ -108,12 +107,11 @@ items:
     type: field
   - uid: 'office!Office.EventType.EnhancedLocationsChanged:member'
     summary: |-
-      <span data-ttu-id="7a285-134">在 Outlook 中更改约会位置时触发。</span><span class="sxs-lookup"><span data-stu-id="7a285-134">Triggers when the appointment location is changed in Outlook.</span></span> <span data-ttu-id="7a285-135">仅在任务窗格中受支持。</span><span class="sxs-lookup"><span data-stu-id="7a285-135">Supported with task pane only.</span></span>
+      在 Outlook 中更改约会位置时触发。 仅在任务窗格中受支持。
 
-      <span data-ttu-id="7a285-136">事件处理程序接收一个类型为的参数`Office.EnhancedLocationsChangedEventArgs`</span><span class="sxs-lookup"><span data-stu-id="7a285-136">The event handler receives an argument of type `Office.EnhancedLocationsChangedEventArgs`</span></span><!-- --><span data-ttu-id="7a285-137">.</span><span class="sxs-lookup"><span data-stu-id="7a285-137"></span></span>
+      事件处理程序接收一个类型为的参数`Office.EnhancedLocationsChangedEventArgs`<!-- -->.
 
-      <span data-ttu-id="7a285-138">\[[API 集：邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="7a285-138">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: EnhancedLocationsChanged
     fullName: EnhancedLocationsChanged
     langs:
@@ -121,30 +119,30 @@ items:
     type: field
   - uid: 'office!Office.EventType.ItemChanged:member'
     summary: |-
-      <span data-ttu-id="7a285-139">在任务窗格处于固定状态时选择不同的 Outlook 项目进行查看时触发触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-139">Triggers when a different Outlook item is selected for viewing while the task pane is pinned.</span></span> <span data-ttu-id="7a285-140">仅在任务窗格中受支持。</span><span class="sxs-lookup"><span data-stu-id="7a285-140">Supported with task pane only.</span></span>
+      在任务窗格处于固定状态时选择不同的 Outlook 项目进行查看时触发触发器。 仅在任务窗格中受支持。
 
-      <span data-ttu-id="7a285-141">\[[API 集：邮箱 1.5](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="7a285-141">\[ [API set: Mailbox 1.5](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      \[[API 集：邮箱 1.5](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: ItemChanged
     fullName: ItemChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.NodeDeleted:member'
-    summary: <span data-ttu-id="7a285-142">删除 customXmlPart 节点时触发的触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-142">Triggers when a customXmlPart node is deleted.</span></span>
+    summary: 删除 customXmlPart 节点时触发的触发器。
     name: NodeDeleted
     fullName: NodeDeleted
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.NodeInserted:member'
-    summary: <span data-ttu-id="7a285-143">插入 customXmlPart 节点时触发的触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-143">Triggers when a customXmlPart node is inserted.</span></span>
+    summary: 插入 customXmlPart 节点时触发的触发器。
     name: NodeInserted
     fullName: NodeInserted
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.NodeReplaced:member'
-    summary: <span data-ttu-id="7a285-144">替换 customXmlPart 节点时的触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-144">Triggers when a customXmlPart node is replaced.</span></span>
+    summary: 替换 customXmlPart 节点时的触发器。
     name: NodeReplaced
     fullName: NodeReplaced
     langs:
@@ -152,11 +150,11 @@ items:
     type: field
   - uid: 'office!Office.EventType.OfficeThemeChanged:member'
     summary: |-
-      <span data-ttu-id="7a285-145">在 Outlook 中更改 OfficeTheme 时触发。</span><span class="sxs-lookup"><span data-stu-id="7a285-145">Triggers when the OfficeTheme is changed in Outlook.</span></span> <span data-ttu-id="7a285-146">仅在任务窗格中受支持。</span><span class="sxs-lookup"><span data-stu-id="7a285-146">Supported with task pane only.</span></span>
+      在 Outlook 中更改 OfficeTheme 时触发。 仅在任务窗格中受支持。
 
-      <span data-ttu-id="7a285-147">事件处理程序接收一个类型为的参数`Office.OfficeThemeChangedEventArgs`</span><span class="sxs-lookup"><span data-stu-id="7a285-147">The event handler receives an argument of type `Office.OfficeThemeChangedEventArgs`</span></span><!-- --><span data-ttu-id="7a285-148">.</span><span class="sxs-lookup"><span data-stu-id="7a285-148"></span></span>
+      事件处理程序接收一个类型为的参数`Office.OfficeThemeChangedEventArgs`<!-- -->.
 
-      <span data-ttu-id="7a285-149">\[[API 集：邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="7a285-149">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
     isPreview: true
     name: OfficeThemeChanged
     fullName: OfficeThemeChanged
@@ -165,11 +163,11 @@ items:
     type: field
   - uid: 'office!Office.EventType.RecipientsChanged:member'
     summary: |-
-      <span data-ttu-id="7a285-150">在 Outlook 中更改了所选项目或约会位置的收件人列表时触发。</span><span class="sxs-lookup"><span data-stu-id="7a285-150">Triggers when the recipient list of the selected item or the appointment location is changed in Outlook.</span></span> <span data-ttu-id="7a285-151">仅在任务窗格中受支持。</span><span class="sxs-lookup"><span data-stu-id="7a285-151">Supported with task pane only.</span></span>
+      在 Outlook 中更改了所选项目或约会位置的收件人列表时触发。 仅在任务窗格中受支持。
 
-      <span data-ttu-id="7a285-152">事件处理程序接收一个类型为的参数`Office.RecipientsChangedEventArgs`</span><span class="sxs-lookup"><span data-stu-id="7a285-152">The event handler receives an argument of type `Office.RecipientsChangedEventArgs`</span></span><!-- --><span data-ttu-id="7a285-153">.</span><span class="sxs-lookup"><span data-stu-id="7a285-153"></span></span>
+      事件处理程序接收一个类型为的参数`Office.RecipientsChangedEventArgs`<!-- -->.
 
-      <span data-ttu-id="7a285-154">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="7a285-154">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: RecipientsChanged
     fullName: RecipientsChanged
     langs:
@@ -177,40 +175,40 @@ items:
     type: field
   - uid: 'office!Office.EventType.RecurrenceChanged:member'
     summary: |-
-      <span data-ttu-id="7a285-155">在 Outlook 中更改所选系列的定期模式时触发。</span><span class="sxs-lookup"><span data-stu-id="7a285-155">Triggers when the recurrence pattern of the selected series is changed in Outlook.</span></span> <span data-ttu-id="7a285-156">仅在任务窗格中受支持。</span><span class="sxs-lookup"><span data-stu-id="7a285-156">Supported with task pane only.</span></span>
+      在 Outlook 中更改所选系列的定期模式时触发。 仅在任务窗格中受支持。
 
-      <span data-ttu-id="7a285-157">事件处理程序接收一个类型为的参数`Office.RecurrenceChangedEventArgs`</span><span class="sxs-lookup"><span data-stu-id="7a285-157">The event handler receives an argument of type `Office.RecurrenceChangedEventArgs`</span></span><!-- --><span data-ttu-id="7a285-158">.</span><span class="sxs-lookup"><span data-stu-id="7a285-158"></span></span>
+      事件处理程序接收一个类型为的参数`Office.RecurrenceChangedEventArgs`<!-- -->.
 
-      <span data-ttu-id="7a285-159">\[[API 集：邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="7a285-159">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: RecurrenceChanged
     fullName: RecurrenceChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.ResourceSelectionChanged:member'
-    summary: <span data-ttu-id="7a285-160">项目中的资源选择发生时触发触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-160">Triggers when a Resource selection happens in Project.</span></span>
+    summary: 项目中的资源选择发生时触发触发器。
     name: ResourceSelectionChanged
     fullName: ResourceSelectionChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.SettingsChanged:member'
-    summary: <span data-ttu-id="7a285-161">引发了 Settings.settingsChanged 事件。</span><span class="sxs-lookup"><span data-stu-id="7a285-161">A Settings.settingsChanged event was raised.</span></span>
-    remarks: '<span data-ttu-id="7a285-162">**主机**： Excel、PowerPoint、Word</span><span class="sxs-lookup"><span data-stu-id="7a285-162">**Hosts**: Excel, PowerPoint, Word</span></span>'
+    summary: 引发了 Settings.settingsChanged 事件。
+    remarks: '**主机**： Excel、PowerPoint、Word'
     name: SettingsChanged
     fullName: SettingsChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.TaskSelectionChanged:member'
-    summary: <span data-ttu-id="7a285-163">项目中的任务选择发生时触发触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-163">Triggers when a Task selection happens in Project.</span></span>
+    summary: 项目中的任务选择发生时触发触发器。
     name: TaskSelectionChanged
     fullName: TaskSelectionChanged
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.EventType.ViewSelectionChanged:member'
-    summary: <span data-ttu-id="7a285-164">当项目中的视图选择发生时触发触发器。</span><span class="sxs-lookup"><span data-stu-id="7a285-164">Triggers when a View selection happens in Project.</span></span>
+    summary: 当项目中的视图选择发生时触发触发器。
     name: ViewSelectionChanged
     fullName: ViewSelectionChanged
     langs:
