--- a/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
@@ -2,10 +2,9 @@
 items:
   - uid: 'outlook!Office.EnhancedLocationsChangedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="7ae11-101">在引发`Office.EventType.EnhancedLocationsChanged`事件时提供当前增强的位置。</span><span class="sxs-lookup"><span data-stu-id="7ae11-101">Provides the current enhanced locations when the `Office.EventType.EnhancedLocationsChanged` event is raised.</span></span>
+      在引发`Office.EventType.EnhancedLocationsChanged`事件时提供当前增强的位置。
 
-      <span data-ttu-id="7ae11-102">\[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7ae11-102">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: Office.EnhancedLocationsChangedEventArgs
     fullName: Office.EnhancedLocationsChangedEventArgs
     langs:
@@ -17,10 +16,9 @@ items:
       - 'outlook!Office.EnhancedLocationsChangedEventArgs#type:member'
   - uid: 'outlook!Office.EnhancedLocationsChangedEventArgs#enhancedLocations:member'
     summary: |-
-      <span data-ttu-id="7ae11-103">获取增强的位置集。</span><span class="sxs-lookup"><span data-stu-id="7ae11-103">Gets the set of enhanced locations.</span></span>
+      获取增强的位置集。
 
-      <span data-ttu-id="7ae11-104">\[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7ae11-104">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: enhancedLocations
     fullName: enhancedLocations
     langs:
@@ -33,10 +31,9 @@ items:
           - 'outlook!Office.EnhancedLocationsChangedEventArgs#enhancedLocations~0:complex'
   - uid: 'outlook!Office.EnhancedLocationsChangedEventArgs#type:member'
     summary: |-
-      <span data-ttu-id="7ae11-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="7ae11-105">Gets the type of the event.</span></span> <span data-ttu-id="7ae11-106">有关详细信息，请参阅 `Office.EventType`。</span><span class="sxs-lookup"><span data-stu-id="7ae11-106">See `Office.EventType` for details.</span></span>
+      获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
 
-      <span data-ttu-id="7ae11-107">\[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7ae11-107">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-    isPreview: true
+      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
