--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.contact.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.contact.yml
@@ -2,17 +2,17 @@
 items:
   - uid: 'outlook!Office.Contact:interface'
     summary: |-
-      <span data-ttu-id="6953e-101">表示存储在服务器上的联系人。</span><span class="sxs-lookup"><span data-stu-id="6953e-101">Represents a contact stored on the server.</span></span> <span data-ttu-id="6953e-102">仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="6953e-102">Read mode only.</span></span>
+      表示存储在服务器上的联系人。 仅限阅读模式。
 
-      <span data-ttu-id="6953e-103">与电子邮件或约会相关联的联系人列表在活动项目的 getEntities 或 getEntitiesByType 方法返回的 " [contacts" 属性](xref:outlook!Office.Entities:interface)中返回。</span><span class="sxs-lookup"><span data-stu-id="6953e-103">The list of contacts associated with an email message or appointment is returned in the contacts property of the [Office.Entities](xref:outlook!Office.Entities:interface) object that is returned by the getEntities or getEntitiesByType method of the active item.</span></span>
+      与电子邮件或约会相关联的联系人列表在由活动项的 getEntities 或 getEntitiesByType 方法返回的[实体](xref:outlook!Office.Entities:interface)对象的 "联系人" 属性中返回。
 
-      <span data-ttu-id="6953e-104">\[[API 集：邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6953e-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      \[[API 集：邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      <span data-ttu-id="6953e-105">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**：受限</span><span class="sxs-lookup"><span data-stu-id="6953e-105">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted</span></span>
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**：受限
 
-      <span data-ttu-id="6953e-106">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：读取</span><span class="sxs-lookup"><span data-stu-id="6953e-106">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Read</span></span>
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：读取
 
-      #### <a name="examples"></a><span data-ttu-id="6953e-107">示例</span><span class="sxs-lookup"><span data-stu-id="6953e-107">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       var item = Office.context.mailbox.item;
@@ -42,7 +42,7 @@ items:
       - 'outlook!Office.Contact#phoneNumbers:member'
       - 'outlook!Office.Contact#urls:member'
   - uid: 'outlook!Office.Contact#addresses:member'
-    summary: <span data-ttu-id="6953e-108">包含与联系人关联的邮件和街道地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="6953e-108">An array of strings containing the mailing and street addresses associated with the contact.</span></span> <span data-ttu-id="6953e-109">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="6953e-109">Nullable.</span></span>
+    summary: 包含与联系人关联的邮件和街道地址的字符串数组。 可为 Null。
     name: addresses
     fullName: addresses
     langs:
@@ -54,7 +54,7 @@ items:
         type:
           - 'string[]'
   - uid: 'outlook!Office.Contact#businessName:member'
-    summary: <span data-ttu-id="6953e-110">包含与联系人关联的企业名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="6953e-110">A string containing the name of the business associated with the contact.</span></span> <span data-ttu-id="6953e-111">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="6953e-111">Nullable.</span></span>
+    summary: 包含与联系人关联的企业名称的字符串。 可为 Null。
     name: businessName
     fullName: businessName
     langs:
@@ -66,7 +66,7 @@ items:
         type:
           - string
   - uid: 'outlook!Office.Contact#emailAddresses:member'
-    summary: <span data-ttu-id="6953e-112">包含与联系人关联的 SMTP 电子邮件地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="6953e-112">An array of strings containing the SMTP email addresses associated with the contact.</span></span> <span data-ttu-id="6953e-113">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="6953e-113">Nullable.</span></span>
+    summary: 包含与联系人关联的 SMTP 电子邮件地址的字符串数组。 可为 Null。
     name: emailAddresses
     fullName: emailAddresses
     langs:
@@ -78,7 +78,7 @@ items:
         type:
           - 'string[]'
   - uid: 'outlook!Office.Contact#personName:member'
-    summary: <span data-ttu-id="6953e-114">包含与联系人关联的人员姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="6953e-114">A string containing the name of the person associated with the contact.</span></span> <span data-ttu-id="6953e-115">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="6953e-115">Nullable.</span></span>
+    summary: 包含与联系人关联的人员姓名的字符串。 可为 Null。
     name: personName
     fullName: personName
     langs:
@@ -90,7 +90,7 @@ items:
         type:
           - string
   - uid: 'outlook!Office.Contact#phoneNumbers:member'
-    summary: <span data-ttu-id="6953e-116">包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="6953e-116">An array containing a PhoneNumber object for each phone number associated with the contact.</span></span> <span data-ttu-id="6953e-117">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="6953e-117">Nullable.</span></span>
+    summary: 包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。 可为 Null。
     name: phoneNumbers
     fullName: phoneNumbers
     langs:
@@ -102,7 +102,7 @@ items:
         type:
           - 'outlook!Office.Contact#phoneNumbers~0:complex'
   - uid: 'outlook!Office.Contact#urls:member'
-    summary: <span data-ttu-id="6953e-118">包含与联系人关联的 Internet URL 的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="6953e-118">An array of strings containing the Internet URLs associated with the contact.</span></span> <span data-ttu-id="6953e-119">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="6953e-119">Nullable.</span></span>
+    summary: 包含与联系人关联的 Internet URL 的字符串数组。 可为 Null。
     name: urls
     fullName: urls
     langs:
