--- a/docs/docs-ref-autogen/office/office/office.document.yml
+++ b/docs/docs-ref-autogen/office/office/office.document.yml
@@ -82,7 +82,7 @@ items:
           type:
             - 'office!Office.EventType:enum'
         - id: handler
-          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必需。'
+          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必填。'
           type:
             - any
         - id: options
@@ -352,7 +352,7 @@ items:
           type:
             - 'office!Office.EventType:enum'
         - id: handler
-          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必需。'
+          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必填。'
           type:
             - any
         - id: callback
@@ -517,18 +517,18 @@ items:
           Office.context.document.getFileAsync(Office.FileType.Compressed, { sliceSize: 65536 /*64 KB*/ }, 
               function (result) {
                   if (result.status == "succeeded") {
-                  // If the getFileAsync call succeeded, then
-                  // result.value will return a valid File Object.
-                  var myFile = result.value;
-                  var sliceCount = myFile.sliceCount;
-                  var slicesReceived = 0, gotAllSlices = true, docdataSlices = [];
-                  app.showNotification("File size:" + myFile.size + " #Slices: " + sliceCount);
+                      // If the getFileAsync call succeeded, then
+                      // result.value will return a valid File Object.
+                      var myFile = result.value;
+                      var sliceCount = myFile.sliceCount;
+                      var slicesReceived = 0, gotAllSlices = true, docdataSlices = [];
+                      app.showNotification("File size:" + myFile.size + " #Slices: " + sliceCount);
 
-                  // Get the file slices.
-                  getSliceAsync(myFile, 0, sliceCount, gotAllSlices, docdataSlices, slicesReceived);
+                      // Get the file slices.
+                      getSliceAsync(myFile, 0, sliceCount, gotAllSlices, docdataSlices, slicesReceived);
                   }
                   else {
-                  app.showNotification("Error:", result.error.message);
+                      app.showNotification("Error:", result.error.message);
                   }
           });
       }
