--- a/docs/docs-ref-autogen/excel/toc.yml
+++ b/docs/docs-ref-autogen/excel/toc.yml
@@ -21,6 +21,12 @@ items:
               - name: Office 运行时
                 uid: office-runtime!
                 items:
+                  - name: ApiInformation
+                    uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
+                  - name: Auth
+                    uid: 'office-runtime!OfficeRuntime.Auth:interface'
+                  - name: AuthOptions
+                    uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
                   - name: 对话框
                     uid: 'office-runtime!OfficeRuntime.Dialog:interface'
                   - name: DisplayWebDialogOptions
@@ -363,7 +369,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: Application
+          - name: 应用程序
             uid: 'excel!Excel.Application:class'
           - name: AutoFilter
             uid: 'excel!Excel.AutoFilter:class'
@@ -589,7 +595,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -637,7 +643,7 @@ items:
             uid: 'excel!Excel.PageBreak:class'
           - name: PageBreakCollection
             uid: 'excel!Excel.PageBreakCollection:class'
-          - name: 页面布局
+          - name: PageLayout
             uid: 'excel!Excel.PageLayout:class'
           - name: PageLayoutMarginOptions
             uid: 'excel!Excel.PageLayoutMarginOptions:interface'
@@ -917,7 +923,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -995,7 +1001,7 @@ items:
                 uid: 'office!Office.SetBindingDataOptions:interface'
               - name: SetSelectedDataOptions
                 uid: 'office!Office.SetSelectedDataOptions:interface'
-              - name: Settings
+              - name: 设置
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
