--- a/docs/docs-ref-autogen/excel_1_9/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_9/toc.yml
@@ -21,7 +21,13 @@ items:
               - name: Office 运行时
                 uid: office-runtime!
                 items:
-                  - name: Dialog
+                  - name: ApiInformation
+                    uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
+                  - name: Auth
+                    uid: 'office-runtime!OfficeRuntime.Auth:interface'
+                  - name: AuthOptions
+                    uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
+                  - name: 对话框
                     uid: 'office-runtime!OfficeRuntime.Dialog:interface'
                   - name: DisplayWebDialogOptions
                     uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
@@ -607,7 +613,7 @@ items:
             uid: 'excel!Excel.PageBreak:class'
           - name: PageBreakCollection
             uid: 'excel!Excel.PageBreakCollection:class'
-          - name: 页面布局
+          - name: PageLayout
             uid: 'excel!Excel.PageLayout:class'
           - name: PageLayoutMarginOptions
             uid: 'excel!Excel.PageLayoutMarginOptions:interface'
@@ -675,7 +681,7 @@ items:
             uid: 'excel!Excel.RowPropertiesLoadOptions:interface'
           - name: RunOptions
             uid: 'excel!Excel.RunOptions:interface'
-          - name: 语言
+          - name: 运行时
             uid: 'excel!Excel.Runtime:class'
           - name: SearchCriteria
             uid: 'excel!Excel.SearchCriteria:interface'
@@ -689,7 +695,7 @@ items:
             uid: 'excel!Excel.SettableColumnProperties:interface'
           - name: SettableRowProperties
             uid: 'excel!Excel.SettableRowProperties:interface'
-          - name: 设置
+          - name: Setting
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -753,7 +759,7 @@ items:
             uid: 'excel!Excel.TextRange:class'
           - name: TopBottomConditionalFormat
             uid: 'excel!Excel.TopBottomConditionalFormat:class'
-          - name: Workbook
+          - name: 工作簿
             uid: 'excel!Excel.Workbook:class'
           - name: WorkbookAutoSaveSettingChangedEventArgs
             uid: 'excel!Excel.WorkbookAutoSaveSettingChangedEventArgs:interface'
@@ -851,7 +857,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -881,15 +887,15 @@ items:
                 uid: 'office!Office.CustomXmlParts:interface'
               - name: CustomXmlPrefixMappings
                 uid: 'office!Office.CustomXmlPrefixMappings:interface'
-              - name: Dialog
+              - name: 对话框
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -957,7 +963,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
