--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.contact.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.contact.yml
@@ -27,6 +27,19 @@ items:
           console.log("Email addresses: " + JSON.stringify(contact.emailAddresses));
           console.log("Urls: " + JSON.stringify(contact.urls));
       });
+
+      /* Example email containing a contact, John Smith:
+      Hi there,
+      I have received the package.
+
+      Thanks.
+      John Smith
+      Contoso Corporation
+      1 Contoso Way, Redmond, WA 98052
+      john.smith@contoso.com
+      206-111-1111
+      https://github.com/contoso/john.smith
+      */
       ```
     name: Office.Contact
     fullName: Office.Contact
@@ -42,7 +55,7 @@ items:
       - 'outlook!Office.Contact#phoneNumbers:member'
       - 'outlook!Office.Contact#urls:member'
   - uid: 'outlook!Office.Contact#addresses:member'
-    summary: 包含与联系人关联的邮件和街道地址的字符串数组。 可为 Null。
+    summary: 包含与联系人关联的邮件和街道地址的字符串数组。 可为 NULL。
     name: addresses
     fullName: addresses
     langs:
@@ -54,7 +67,7 @@ items:
         type:
           - 'string[]'
   - uid: 'outlook!Office.Contact#businessName:member'
-    summary: 包含与联系人关联的企业名称的字符串。 可为 Null。
+    summary: 包含与联系人关联的企业名称的字符串。 可为 NULL。
     name: businessName
     fullName: businessName
     langs:
@@ -66,7 +79,7 @@ items:
         type:
           - string
   - uid: 'outlook!Office.Contact#emailAddresses:member'
-    summary: 包含与联系人关联的 SMTP 电子邮件地址的字符串数组。 可为 Null。
+    summary: 包含与联系人关联的 SMTP 电子邮件地址的字符串数组。 可为 NULL。
     name: emailAddresses
     fullName: emailAddresses
     langs:
@@ -78,7 +91,7 @@ items:
         type:
           - 'string[]'
   - uid: 'outlook!Office.Contact#personName:member'
-    summary: 包含与联系人关联的人员姓名的字符串。 可为 Null。
+    summary: 包含与联系人关联的人员姓名的字符串。 可为 NULL。
     name: personName
     fullName: personName
     langs:
@@ -90,7 +103,7 @@ items:
         type:
           - string
   - uid: 'outlook!Office.Contact#phoneNumbers:member'
-    summary: 包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。 可为 Null。
+    summary: 包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。 可为 NULL。
     name: phoneNumbers
     fullName: phoneNumbers
     langs:
@@ -102,7 +115,7 @@ items:
         type:
           - 'outlook!Office.Contact#phoneNumbers~0:complex'
   - uid: 'outlook!Office.Contact#urls:member'
-    summary: 包含与联系人关联的 Internet URL 的字符串数组。 可为 Null。
+    summary: 包含与联系人关联的 Internet URL 的字符串数组。 可为 NULL。
     name: urls
     fullName: urls
     langs:
