commit bilingual contents

--- a/docs/docs-ref-autogen/excel/office-runtime.yml
+++ b/docs/docs-ref-autogen/excel/office-runtime.yml
@@ -7,12 +7,15 @@ items:
       - typeScript
     type: package
     children:
+      - 'office-runtime!OfficeRuntime.ApiInformation:interface'
+      - 'office-runtime!OfficeRuntime.Auth:interface'
+      - 'office-runtime!OfficeRuntime.AuthOptions:interface'
       - 'office-runtime!OfficeRuntime.Dialog:interface'
       - 'office-runtime!OfficeRuntime.displayWebDialog:function(1)'
       - 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
       - 'office-runtime!OfficeRuntime.Storage:interface'
   - uid: 'office-runtime!OfficeRuntime.displayWebDialog:function(1)'
-    summary: <span data-ttu-id="15b8f-101">启用 "弹出 web" 对话框的方法。</span><span class="sxs-lookup"><span data-stu-id="15b8f-101">Method that enables a pop up web dialog box.</span></span>
+    summary: 启用 "弹出 web" 对话框的方法。
     name: 'OfficeRuntime.displayWebDialog(url, options)'
     fullName: 'OfficeRuntime.displayWebDialog(url, options)'
     langs:
@@ -26,14 +29,20 @@ items:
         description: ''
       parameters:
         - id: url
-          description: <span data-ttu-id="15b8f-102">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="15b8f-102">Must be a string.</span></span>
+          description: 必须是字符串。
           type:
             - string
         - id: options
-          description: <span data-ttu-id="15b8f-103">可选参数。</span><span class="sxs-lookup"><span data-stu-id="15b8f-103">Optional parameter.</span></span> <span data-ttu-id="15b8f-104">必须为 DisplayWebDialogOptions 类型。</span><span class="sxs-lookup"><span data-stu-id="15b8f-104">Must be of type DisplayWebDialogOptions.</span></span>
+          description: 可选参数。 必须为 DisplayWebDialogOptions 类型。
           type:
             - 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
 references:
+  - uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
+    name: OfficeRuntime.ApiInformation
+  - uid: 'office-runtime!OfficeRuntime.Auth:interface'
+    name: OfficeRuntime.Auth
+  - uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
+    name: OfficeRuntime.AuthOptions
   - uid: 'office-runtime!OfficeRuntime.Dialog:interface'
     name: OfficeRuntime.Dialog
   - uid: 'office-runtime!OfficeRuntime.displayWebDialog~0:complex'
